Bug 375070 - Cumulative undo not working
Summary: Cumulative undo not working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 376559 409974 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-15 01:37 UTC by Manga Tengu
Modified: 2021-05-13 12:05 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manga Tengu 2017-01-15 01:37:26 UTC
using AppImage.
Checking cumulative undo will not be taken into account.
Cumulative undo won't work. Opening the undo settings again, you can see it is unchecked as before.

BTW this feature is really useful, I think it should be easier to spot.
Comment 1 Quiralta 2017-01-15 02:29:04 UTC
This is also present on master branch, can confirm the same behavior. (linux here too)
Comment 2 mvowada 2017-01-15 08:33:15 UTC
Hi, confirming the issue on Ubuntu 14.04 with Krita 3.1.1 Appimage.
Comment 3 Halla Rempt 2017-01-17 10:33:03 UTC
Git commit 61dcdf5c81651b7324da98796e9b60eb695c6de5 by Boudewijn Rempt.
Committed on 17/01/2017 at 10:32.
Pushed by rempt into branch 'master'.

M  +5    -5    plugins/dockers/historydocker/DlgConfigureHistoryDock.cpp
M  +2    -1    plugins/dockers/historydocker/DlgConfigureHistoryDock.h
M  +1    -1    plugins/dockers/historydocker/HistoryDock.cpp

https://commits.kde.org/krita/61dcdf5c81651b7324da98796e9b60eb695c6de5
Comment 4 Halla Rempt 2017-01-17 10:33:18 UTC
Git commit 152862cb4aeac4eb98af3058daabae0a566a195a by Boudewijn Rempt.
Committed on 17/01/2017 at 10:33.
Pushed by rempt into branch 'krita/3.1'.

M  +5    -5    plugins/dockers/historydocker/DlgConfigureHistoryDock.cpp
M  +2    -1    plugins/dockers/historydocker/DlgConfigureHistoryDock.h
M  +1    -1    plugins/dockers/historydocker/HistoryDock.cpp

https://commits.kde.org/krita/152862cb4aeac4eb98af3058daabae0a566a195a
Comment 5 Manga Tengu 2017-02-21 18:39:20 UTC
In V3.1.2 the bug is not fixed yet
Comment 6 Manga Tengu 2017-02-21 18:39:50 UTC
The checkbox is saved, but the effect is not there
Comment 7 Manga Tengu 2017-02-21 18:40:36 UTC
*** Bug 376559 has been marked as a duplicate of this bug. ***
Comment 8 karpi 2018-05-22 11:10:38 UTC
I'm confirming in version 4.0.2
Comment 9 Patricia Moncorgé 2018-08-25 18:09:03 UTC
FYI Cumulative Undo is still not working on Krita 4.1.0 neither 4.1.1 (AppImage)
Comment 10 Quiralta 2018-08-26 02:08:04 UTC
(In reply to Patricia Moncorgé from comment #9)
> FYI Cumulative Undo is still not working on Krita 4.1.0 neither 4.1.1
> (AppImage)

Thanks for the notice, but yeah, that is why this still marked as "confirmed" and not as "fixed resolved", it means still is in the queue till the devs can work on it :)
Comment 11 Halla Rempt 2019-07-19 07:22:22 UTC
*** Bug 409974 has been marked as a duplicate of this bug. ***
Comment 12 Tyson Tan 2020-04-01 16:27:20 UTC
Translating the documentation. I can confirm it's still broken. Also, the documentation doesn't match the current UI.
Comment 13 tomtomtomreportingin 2021-03-02 21:59:31 UTC
Additional note: The "Split Strokes" setting doesn't appear to be configurable as it's reset to some sort of default after closing the configuration dialog.
Comment 14 Dmitry Kazakov 2021-05-05 13:33:48 UTC
This patch should solve the issue: https://invent.kde.org/graphics/krita/-/merge_requests/834
Comment 15 Dmitry Kazakov 2021-05-13 10:41:46 UTC
Git commit cc8e37f64e46b31992d4e65497296681ab06a678 by Dmitry Kazakov.
Committed on 13/05/2021 at 10:41.
Pushed by dkazakov into branch 'master'.

Recover cumulative undo/redo support

(it was lost during a merge operation in 2015...)

M  +2    -1    libs/ui/tool/kis_tool_freehand_helper.cpp
M  +2    -0    libs/ui/tool/strokes/freehand_stroke.cpp
M  +2    -1    libs/ui/tool/strokes/freehand_stroke.h
M  +14   -4    libs/ui/tool/strokes/kis_painter_based_stroke_strategy.cpp
M  +5    -2    libs/ui/tool/strokes/kis_painter_based_stroke_strategy.h

https://invent.kde.org/graphics/krita/commit/cc8e37f64e46b31992d4e65497296681ab06a678
Comment 16 Dmitry Kazakov 2021-05-13 10:41:54 UTC
Git commit 46469ed37c4d602f4826d307e857466ea542ab64 by Dmitry Kazakov.
Committed on 13/05/2021 at 10:41.
Pushed by dkazakov into branch 'master'.

Fix order of execution of undo commands with cumulative undo

M  +11   -10   libs/command/kundo2stack.cpp

https://invent.kde.org/graphics/krita/commit/46469ed37c4d602f4826d307e857466ea542ab64
Comment 17 Tyson Tan 2021-05-13 12:05:49 UTC
Thank you Dmitry! :D