Recover cumulative undo/redo support

(it was lost during a merge operation in 2015...)

BUG:375070