libs/ui/tool/kis_tool_freehand_helper.cpp
@@ -296,7 +296,8 @@ void KisToolFreehandHelper::initPaintImpl(qreal startAngle,
         new FreehandStrokeStrategy(m_d->resources,
                                    m_d->strokeInfos,
                                    m_d->transactionText,
-                                   FreehandStrokeStrategy::SupportsContinuedInterstrokeData);
+                                   FreehandStrokeStrategy::SupportsContinuedInterstrokeData |
+                                   FreehandStrokeStrategy::SupportsTimedMergeId);
 
     m_d->strokeId = m_d->strokesFacade->startStroke(stroke);
 
